# JustIngredients

./: .dockerignore  .env.example  .gitignore  CICD_DESIGN.md  CODE_REVIEW.md  Cargo.toml  DUPLICATE_RECIPES_IMPLEMENTATION.md  Dockerfile  INGREDIENT_EDITING_PROPOSAL.md  LICENSE  OBSERVABILITY_IMPLEMENTATION_PLAN.md  PHOTO_CAPTION_FEATURE_TASKS.md  README.md  SQLX_OFFLINE_MODE_GUIDE.md  TASK_1_ANALYSIS.md  TASK_2_IMPLEMENTATION.md  TASK_3_IMPLEMENTATION.md  analyze_current_behavior.rs  callback_handler_refactoring_plan.md  code-improvement-tasks.md  data_model.md  debug_multiline.rs  deny.toml  deploy-grafana.sh  deploy-monitoring.sh  deploy.sh  fly-grafana.toml  fly-monitoring.toml  fly-staging.toml  fly.prod.toml  fly.staging.toml  fly.toml  image_cancellation_fix_study.md  mutex-unwraps-fix-tasks.md  package.json  recipe_editing_cancel_update.md  schema.sql  setup-gemini-review.sh  smoke-tests.js  test_confidence.rs  (+2 more)
.github/: copilot-instructions.md
.sqlx/: query-3a87c3c9d6a0366f36ffc474367720aece49797b94fa067f958020b9538143aa.json  query-8484d0f36ed6296f460bcb85ebe3a7e9144ead459c8c8bdeffee3500c9baad2b.json  query-a9f85cdc88a1cfbc6235d3e27ff6b32e29300b0793fa4152b89823d2287d85a6.json  query-cca11fdfdb7771a24e04c44ea607fb8919dc6873e3231ea56ea0ae324e1c2da8.json
config/: deny.toml  ingredient_categories.json  measurement_units.json  user_patterns.txt  user_words.txt
deploy/: Dockerfile  fly-staging.toml  fly.toml
docs/: add-ingredient-review-state-task.md  cancel_fix_tasks.md  deployment-strategy.md  deployment.md  fly-deployment-guide.md  fly-io-deployment-study.md  flyio-deployment-guide.md  ingredient-confidence-tasks.md  ingredient-editing-ux-improvement.md  ingredient-extraction-unified-solution.md  ingredient_extraction_evolution.md  monitoring-runbook.md  multi-line-implementation-tasks.md  multi-line-ingredient-parsing-prd.md  (+6 more)
(+108 files in other folders)
