[package]
name = "just-ingredients"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
teloxide = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio-native-tls", "chrono" ] }
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0.100"
tempfile = "3.23.0"
reqwest = { version = "0.12", features = ["json"] }
leptess = "0.14" # Rust binding for Tesseract and Leptonica
image = "0.25"    # For image handling if needed
rand = "0.9.2" # For random jitter in retry delays
fluent-bundle = "0.16" # Fluent bundle for message management
unic-langid = "0.9" # Language identifier support
regex = "1.12" # Regular expressions for text processing
lazy_static = "1.5.0" # Lazy static initialization
chrono = { version = "0.4.42", features = ["serde"] } # DateTime handling
tracing = "0.1" # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # Tracing subscriber with filtering
parking_lot = "0.12.5" # Efficient synchronization primitives

# Observability dependencies
metrics = "0.24" # Metrics collection
metrics-exporter-prometheus = "0.17" # Prometheus metrics exporter
opentelemetry = "0.31" # OpenTelemetry for distributed tracing
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] } # OpenTelemetry SDK for tracing
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] } # OTLP exporter for traces
hyper = "1.0" # HTTP implementation
hyper-util = { version = "0.1.17", features = ["tokio"] } # Hyper utilities
tokio-util = { version = "0.7", features = ["io"] } # Tokio utilities

[[example]]
name = "recipe_parser"
path = "examples/recipe_parser.rs"